cm4all-beng-proxy (0.7.8) unstable; urgency=low

  * http-body: support partial response in method available()

 --

cm4all-beng-proxy (0.7.7) unstable; urgency=low

  * parser: allow underscore in attribute names
  * processor: check "type" attribute before URI rewriting
  * http-client: start receiving before request is sent
  * http-client: try to read response after write error
  * http-client: deliver response body after headers are finished
  * http-client: release socket as early as possible
  * http-client: serve buffer after socket has been closed
  * istream-chunked: clear input stream in abort handler
  * growing-buffer: fix crash after close in "data" callback

 -- Max Kellermann <mk@cm4all.com>  Thu, 03 Dec 2009 13:09:57 +0100

cm4all-beng-proxy (0.7.6) unstable; urgency=low

  * istream-hold: return -2 if handler is not available yet
  * http, ajp, fcgi: use istream_hold on request body
  * http-client: implemented splicing the request body
  * response: added missing URI substitution

 -- Max Kellermann <mk@cm4all.com>  Tue, 17 Nov 2009 15:25:35 +0100

cm4all-beng-proxy (0.7.5) unstable; urgency=low

  * session: 64 bit session ids
  * session: allow arbitrary session id size (at compile-time)
  * debian: larger default log file (16 * 4MB)
  * debian: added package cm4all-beng-proxy-toi

 -- Max Kellermann <mk@cm4all.com>  Mon, 16 Nov 2009 15:51:24 +0100

cm4all-beng-proxy (0.7.4) unstable; urgency=low

  * measure the latency of external resources
  * widget-http: partially revert "don't query session if !stateful"

 -- Max Kellermann <mk@cm4all.com>  Tue, 10 Nov 2009 15:06:03 +0100

cm4all-beng-proxy (0.7.3) unstable; urgency=low

  * uri-verify: don't reject double slash after first segment
  * hostname: allow the hyphen character
  * processor: allow processing without session
  * widget-http: don't query session if !stateful
  * request: disable session management for known bots
  * python: fixed AttributeError in __getattr__()