@@ -51,6 +51,8 @@ TRANSLATE_DISCARD_SESSION = 46
 TRANSLATE_SCHEME = 47
 TRANSLATE_REQUEST_HEADER_FORWARD = 48
 TRANSLATE_RESPONSE_HEADER_FORWARD = 49
+TRANSLATE_DEFLATED = 50
+TRANSLATE_GZIPPED = 51
 
 HEADER_FORWARD_NO = 0
 HEADER_FORWARD_YES = 1
@@ -259,6 +261,12 @@ class Response:
         assert len(path) > 0
         assert path[0] == '/'
         self.packet(TRANSLATE_PATH, path)
+
+    def gzipped(self, path):
+        assert isinstance(path, str)
+        assert len(path) > 0
+        assert path[0] == '/'
+        self.packet(TRANSLATE_GZIPPED, path)
 
     def content_type(self, content_type):
         assert isinstance(content_type, str)
